# python-microservice-docker

./: .gitignore  docker-compose.yml
cast-service/: .env  Dockerfile  pyproject.toml
cast-service/app/: main.py
movie-service/: .dockerignore  Dockerfile  pyproject.toml
movie-service/app/: main.py
